# pybmcc

./: .gitignore  LICENSE  README.md  pyproject.toml
AudioControl/: __init__.py  api_client.py  configuration.py  rest.py
AudioControl/api/: __init__.py  default_api.py
AudioControl/models/: __init__.py  available.py  description.py  description_capabilities.py  description_capabilities_padding.py  description_gain_range.py  input.py  level.py  low_cut_filter.py  padding.py  phantom_power.py  supported_inputs.py  supported_inputs_supported_inputs.py
ColorCorrectionControl/: __init__.py  api_client.py  configuration.py  rest.py
ColorCorrectionControl/api/: __init__.py  default_api.py
ColorCorrectionControl/models/: __init__.py  color.py  contrast.py  gain.py  gamma.py  lift.py  luma_contribution.py  offset.py
EventControl/: __init__.py  api_client.py  configuration.py  rest.py
EventControl/api/: __init__.py  default_api.py
EventControl/models/: __init__.py  events_list.py
LensControl/: __init__.py  api_client.py  configuration.py  rest.py
MediaControl/: __init__.py  api_client.py  configuration.py  rest.py
PresetControl/: __init__.py  api_client.py  configuration.py  rest.py
PyBMCC/: ATEMApi.py  AsyncApi.py  AsyncMessage.py  AtemApi.py  AudioRestApi.py  BMCCAudio.py  BMCCCamera.py  BMCCColorCorrection.py  BMCCEvent.py  BMCCLens.py  BMCCMedia.py  BMCCPreset.py  BMCCSystem.py  BMCCTimeline.py  BMCCTransport.py  BMCCVideo.py  Camera.py  ColorCorrectionRestApi.py  Enums.py  LensRestApi.py  MediaRestApi.py  PresetRestApi.py  RESTApi.py  SystemRestApi.py  VideoRestApi.py  __init__.py
SystemControl/: __init__.py  api_client.py  configuration.py  rest.py
TimelineControl/: __init__.py  api_client.py  configuration.py  rest.py
TransportControl/: __init__.py  api_client.py  configuration.py  rest.py
VideoControl/: __init__.py  api_client.py  configuration.py  rest.py
examples/: AsyncTest.py  AtemTest.py  AudioTest.py  Autofocus.py  BMCCAsyncTest.py  ColorCorrectionTest.py  LensTest.py  MediaTest.py  PresetTest.py  RecordAndDownload.py  SendAsyncCommands.py  SystemTest.py  TransportTest.py
notes/: asyncNotes.txt
scripts/: build-api.sh
(+85 files in other folders)
