[project]
name = "PyBMCC"
version = "1.0b1"
authors = [
  { name="Chris Howard", email="cehoward@kersplody.com" },
]
requires-python = ">=3.8"
description = "A Python library to monitor and control Blackmagic Design cameras."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "certifi=>2023.11.17",
    "fxpmath=>0.4.9",
    "PyATEMMax=>1.0b9",
    "python_dateutil=>2.8.2",
    "Requests=>2.31.0",
    "six=>1.16.0",
    "urllib3=>2.2.0",
    "websocket_client=>1.7.0"
]


[project.urls]
project = "https://github.com/kersplody/pybmcc"

[tool.setuptools]
packages = [
    "AudioControl",
    "MediaControl",
    "TimelineControl",
    "ColorCorrectionControl",
    "PresetControl",
    "TransportControl",
    "TimelineControl",
    "EventControl",
    "VideoControl",
    "LensControl",
    "SystemControl",
    "PyBMCC"
]

